--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node index.js"
-  }, 
-  "main": "server.js",  
+  },
+  "main": "server.js",
   "dependencies": {
-    "express": "^4.18.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3", 
+    "mongoose": "^8.3.1"
   }
 }
