--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "morena-family-website",
   "version": "1.0.0",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "npx nodemon index.js"
   },
   "main": "server.js",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.18.3", 
-    "mongoose": "^8.3.1"
+    "express": "^4.18.3",
+    "express-session": "^1.18.0",
+    "mongoose": "^8.3.1",
+    "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
